--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="graph"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/paul-graph-lib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
